--- a/src/components/Footer.module.css
+++ b/src/components/Footer.module.css
@@ -2,9 +2,9 @@
 
 .footer {
   margin-bottom: 0rem;
-  padding-bottom: 2rem;
+  padding-bottom: 1rem;
   padding-top: 0.5rem;
-  border-bottom: 0px;
+  border-top: 2px solid var(--border);
 }
 
 .inner {
@@ -56,6 +56,7 @@
   left: 0;
   background: var(--background-secondary);
   border-radius: 0.5rem;
+  box-shadow: 0 5px 24px rgba(0, 0, 0, 0.25);
   padding: 0.75rem 1rem;
   opacity: 0;
   transform: translateY(10px);
